k8s/base/analytics-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  labels:
    app.kubernetes.io/name: analytics-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: url-shortener
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: analytics-service
